--- a/package.json
+++ b/package.json
@@ -3,12 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^7.23.0",
+    "jwt-decode": "^3.0.0",
     "react": "^16.13.1",
+    "react-back-to-top-button": "0.0.14",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-dropdown": "^1.9.0",
+    "react-hook-form": "^6.9.2",
+    "react-responsive-carousel": "^3.2.10",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "react-select": "^3.1.0",
+    "react-spring": "^8.0.27"
   },
   "scripts": {
     "start": "react-scripts start",
